Fix modal spacing issue

--- a/frontend/src/assets/sass/layout.scss
+++ b/frontend/src/assets/sass/layout.scss
@@ -728,3 +728,8 @@ td.sticky-col {
   font-size: 1.5rem;
   font-weight: 700;
 }
+
+// OVERRIDES
+.modal-body {
+  padding: 0;
+}
